# infrahub-docs

./: .gitignore  .gitmodules  .lycheeignore  .markdownlint.yaml  .markdownlintignore  .vale.ini  .yamllint.yml  CLAUDE.md  README.md  development  flake.nix  lychee.toml  models  pyproject.toml  tasks.py
.github/: build-docs.sh  file-filters.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  website-technical-issue.md
.github/workflows/: ci.yml  notify-ci-failure.yml  upload-docs.yml
.vale/styles/: spelling-exceptions.txt
docs/: docusaurus.config.ts  globalVars.js  package-lock.json  package.json  redirects-doc-migration.ts  sidebar-releases.ts  sidebar-utils.ts  sidebars-ansible.ts  sidebars-backup.ts  sidebars-bundle-dc.ts  sidebars-demo-dc.ts  sidebars-demo.ts  sidebars-emma.ts  sidebars-infrahub-demo-sp.ts  sidebars-infrahub-solution-ai-dc.ts  sidebars-infrahub.ts  sidebars-infrahubctl.ts  sidebars-integrations.ts  sidebars-mcp.ts  sidebars-nornir.ts  sidebars-python-sdk.ts  sidebars-schema.ts  sidebars-skills.ts  sidebars-solution-ai-dc.ts  sidebars-sync.ts  sidebars-vscode.ts  sidebars.ts
docs/demo-dc-fabric/: step_by_step.mdx
docs/docs-ai-skills/: readme.mdx
docs/docs-ansible/: readme.mdx
docs/docs-backup/: readme.mdx  self-update.mdx
docs/docs-bundle-dc/: cloud-management.mdx  concepts.mdx  developer-guide.mdx  enterprise.mdx  install.mdx  readme.mdx  service-catalog.mdx  user-walkthrough.mdx
docs/docs-demo/: install.mdx  readme.mdx  step_by_step.mdx
docs/docs-demo-dc/: concepts.mdx  containerlab-deployment.mdx  developer-guide.mdx  install.mdx  readme.mdx  security-management.mdx  service-catalog.mdx
docs/docs-emma/: experimental.mdx  readme.mdx  screenshots.mdx  test.md
models/: base_menu.yml
scripts/: setup-docs-repo.py
(+694 files in other folders)
