[project]
name = "infrahub-docs"
version = "0.2.0"
description = ""
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "invoke>=2.2",
    "jsonschema==4.25.1",
]

[dependency-groups]
dev = [
    "yamllint>=1.37.1",
    "ruff>=0.14.10",
    "ty>=0.0.1a7",
]

[tool.ty]
environment = { python-version = "3.12" }

[tool.ty.src]
exclude = ["infrahub/", "docs/"]

[tool.ruff]
line-length = 120
exclude = ["infrahub/"]
