[project]
name = "infrahub-docs"
version = "0.2.0"
description = "Documentation aggregation site for Infrahub projects"
readme = "README.md"
authors = [{ name = "OpsMill", email = "info@opsmill.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "invoke>=2.2.1,<3.0.0",
    "jsonschema==4.25.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10",
    "yamllint>=1.37.1",
]

[tool.ruff]
line-length = 120
exclude = ["infrahub/", ".venv/", "docs/", "models/", "scripts/"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
pretty = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = false
exclude = ["infrahub/", "docs/", "models/", "scripts/"]
